--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
     "manifest_version": 2,
-  
-    "name": "Getting started example",
+
+    "name": "Dank Summerizer 4000",
     "description": "Does magic ML stuff.",
     "version": "1.0",
-  
+
     "browser_action": {
       "default_icon": "icon.png",
       "default_popup": "popup.html"
@@ -19,7 +19,7 @@
         {
             "matches": ["http://www.mahmoodmahmood.info/*"],
             "css": [],
-            "js": ["mytestscript.js"]   
+            "js": ["mytestscript.js"]
         }
     ],
     "permissions": [
