--- a/requirements.txt
+++ b/requirements.txt
@@ -63,3 +63,4 @@ Werkzeug==0.12.2
 whitenoise==3.3.1
 zope.interface==4.4.1
 nltk==3.2.5
+git+https://github.com/watson-developer-cloud/python-sdk.git
