--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 2,
 
-    "name": "Dank Summarizer 4000",
+    "name": "T:L:D:R",
     "description": "Does magic ML stuff.",
     "version": "1.0",
 
